--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div id="tombolone"></div>
         <form>
-            <button type="submit" id="estrai"><span class="span">Estrai!</span></button>
+            <button type="button" id="estrai"><span class="span">Estrai!</span></button>
         </form>
         <div id="div1"></div>
     </main>
